# Voxie

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
.claude/: launch.json
.github/workflows/: build.yml
scripts/: gen-tray-icon.mjs
src/: App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/cloud/: mod.rs
src-tauri/src/commands/: audio.rs  clipboard.rs  history.rs  mod.rs  model.rs  selection.rs  settings.rs  transcribe.rs  translate.rs  window.rs
src-tauri/src/state/: mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/whisper/: mod.rs
src/assets/: main.css
src/components/: HistoryItemCard.vue
src/stores/: app.ts
src/views/: FloatingWindow.vue  Settings.vue  TranslationView.vue
