[package]
name = "voxie"
version = "0.1.0"
description = "Voxie - 本地语音转文本桌面应用"
authors = ["you"]
edition = "2021"

# 关键：tauri 要求使用 cdylib 和 staticlib，加上 bin
[lib]
name = "voxie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "voxie"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 2 核心框架
tauri = { version = "2", features = [
  "tray-icon",
  "image-ico",
  "image-png",
  "macos-private-api",
] }

# Tauri 插件
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"

# 序列化 / 反序列化（JSON 通信必备）
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时（Tauri 内部也用 tokio）
tokio = { version = "1", features = ["full"] }

# 音频录制（跨平台）
cpal = "0.15"

# HTTP 客户端（云端 API 调用）
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
futures-util = "0.3"

# 日志
log = "0.4"
env_logger = "0.11"

# 错误处理
anyhow = "1"
thiserror = "1"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 线程安全的懒初始化（用于全局状态）
once_cell = "1"

# 临时文件处理
tempfile = "3"

# 获取系统目录路径
dirs = "5"

# 获取 CPU 核心数（用于 whisper 线程优化）
num_cpus = "1"

# 中文简繁体转换（本地，无网络，无 API 依赖）
zhconv = "0.4"

# whisper-rs 本地语音识别（平台差异：macOS 启用 Metal GPU 加速，其他平台纯 CPU）
# 注意：首次编译需要较长时间，会自动编译 whisper.cpp
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.13", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = { version = "0.13" }

[features]
# Tauri 开发模式下自动重载
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# 发布构建优化：减小体积、提高性能
panic = "abort"      # 崩溃时直接终止（减小二进制体积）
codegen-units = 1    # 单代码生成单元（更好的优化）
lto = true           # 链接时优化
opt-level = "z"      # 优先减小体积
strip = true         # 剥离调试符号
